Extract components and add Twitter Timeline

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-twitter-embed": "^4.0.4",
+    "react-twitter-widgets": "^1.11.0"
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
