--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "eslint-config-prettier": "^8.8.0",
+    "framer-motion": "^10.12.16",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll-parallax": "^3.4.2",
+    "react-tooltip": "^5.13.1",
     "react-twitter-embed": "^4.0.4",
-    "react-twitter-widgets": "^1.11.0"
+    "react-twitter-widgets": "^1.11.0",
+    "react-type-animation": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
