--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "./node_modules/.bin/eslint .",
+    "lint:fix": "./node_modules/.bin/eslint . --fix",
+    "cypress:open": "cypress open"
+    
   },
   "dependencies": {
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "framer-motion": "^10.12.16",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
@@ -19,7 +28,11 @@
     "react-tooltip": "^5.13.1",
     "react-twitter-embed": "^4.0.4",
     "react-twitter-widgets": "^1.11.0",
-    "react-type-animation": "^3.0.1"
+    "react-type-animation": "^3.0.1",
+    "vite-plugin-compression2": "^0.9.1",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "vite": "^4.3.2"
+
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
@@ -27,7 +40,6 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@typescript-eslint/parser": "^5.59.7",
-    "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -35,7 +47,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "typescript": "^5.0.2"
   }
 }
