--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "composite": true,
-    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true,
   },
   "include": ["vite.config.ts"]
 }
