--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lint": "./node_modules/.bin/eslint .",
     "lint:fix": "./node_modules/.bin/eslint . --fix",
     "cypress:open": "cypress open"
-    
   },
   "dependencies": {
+    "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -29,10 +29,9 @@
     "react-twitter-embed": "^4.0.4",
     "react-twitter-widgets": "^1.11.0",
     "react-type-animation": "^3.0.1",
+    "vite": "^4.3.2",
     "vite-plugin-compression2": "^0.9.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "vite": "^4.3.2"
-
+    "vite-plugin-pwa": "^0.15.2"
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
