--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-scroll-parallax": "^3.4.2",
     "react-tooltip": "^5.13.1",
     "react-twitter-embed": "^4.0.4",
