--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,26 +1,59 @@
-name: Linting
-
-on:
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  lint:
-    name: Run ESLint
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run ESLint
-        run: npm run lint
+---
+  #################################
+  #################################
+  ## Super Linter GitHub Actions ##
+  #################################
+  #################################
+  name: Lint Code Base
+  
+  #############################
+  # Start the job on all push #
+  #############################
+  on:
+    push:
+      branches-ignore: [master, main]
+      # Remove the line above to run when pushing to master
+    pull_request:
+      branches: [master, main]
+  
+  ###############
+  # Set the Job #
+  ###############
+  jobs:
+    build:
+      # Name the Job
+      name: Lint Code Base
+      # Set the agent to run on
+      runs-on: ubuntu-latest
+  
+      ############################################
+      # Grant status permission for MULTI_STATUS #
+      ############################################
+      permissions:
+        contents: read
+        packages: read
+        statuses: write
+  
+      ##################
+      # Load all steps #
+      ##################
+      steps:
+        ##########################
+        # Checkout the code base #
+        ##########################
+        - name: Checkout Code
+          uses: actions/checkout@v3
+          with:
+            # Full git history is needed to get a proper
+            # list of changed files within `super-linter`
+            fetch-depth: 0
+  
+        ################################
+        # Run Linter against code base #
+        ################################
+        - name: Lint Code Base
+          uses: super-linter/super-linter@v5
+          env:
+            VALIDATE_ALL_CODEBASE: false
+            DEFAULT_BRANCH: master
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
