--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,21 +1,8 @@
-name: Lint Code Base
-
-on: [push, pull_request]
-
+name: Run Unit Tests and Lint Files
+"on": push
 jobs:
-  build:
-    name: Lint Code Base
+  unit_test-lint:
     runs-on: ubuntu-latest
-
     steps:
-
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      
-      - name: Lint Code Base
-        uses: github/super-linter@v4
-        env:
-            VALIDATE_JAVASCRIPT_ES: true
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - run: npm run lint
