--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,9 +1,19 @@
 name: Run Unit Tests and Lint Files
-"on": push
+
+on:
+  push:
+    branches:
+      - main  
+
 jobs:
   unit_test-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: |
-              npm run lint
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run linting
+        run: npm run lint
