--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,12 +1,30 @@
-name: Run Unit Tests and Lint Files
-"on": push
+# name: Run Unit Tests and Lint Files
+# "on": push
+# jobs:
+#   unit_test-lint:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - run: |
+#               npm run lint
+
+
+name: Run Lint
+
+on:
+  push:
+    branches:
+      - main  
+
 jobs:
   unit_test-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run: |
-              npm ci
-              npm run build
-              npm run test:unit
-              npm run lint
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run linting
+        run: npm run lint
