--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,30 +1,28 @@
-# name: Run Unit Tests and Lint Files
-# "on": push
-# jobs:
-#   unit_test-lint:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
-#       - run: |
-#               npm run lint
-
-
-name: Run Lint
-
-on:
-  push:
-    branches:
-      - main  
-
+name: Run Unit Tests and Lint Files
+"on": push
 jobs:
   unit_test-lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Install dependencies
-        run: npm install
+      - uses: actions/checkout@v2
+      - run: |
+              npm install
+              npm run lint
 
-      - name: Run linting
-        run: npm run lint
+
+# name: Run Lint
+
+# on:
+#   push:
+#     branches:
+#       - main  
+
+# jobs:
+#   unit_test-lint:
+#     runs-on: ubuntu-latest
+#     steps:
+#         uses: actions/checkout@v2
+        
+#         run: |
+#                 npm install
+#                 npm run lint
