--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -5,9 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: |
-              npm install
-              npm run lint
+      - run:  npm install
+      - run:  npm run lint
 
 
 # name: Run Lint
