--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,10 +1,26 @@
 name: Run 'npm run lint'
-on: 'push'
+on: push
 jobs:
   unit_test-lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - run:  npm install
-      - run:  npm run lint
-        continue-on-error: false 
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run linting
+        run: npm run lint
+        continue-on-error: true  # Continue to the next step even if linting fails
+
+      - name: Check linting errors
+        run: |
+          if [[ ${{ job.status }} == 'failure' ]]; then
+            echo "Linting failed. Aborting the push."
+            exit 1
+          fi
+        shell: bash
+
+      # ... (other steps, such as running tests or deploying)
+
