--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,12 +1,10 @@
 name: Run 'npm run lint'
 on:
   push:
-    branches:
-      - main  
+    branches: [master, main]
   pull_request:
-    branches:
-      - main  
-      
+    branches: [master, main]
+
 jobs:
   unit_test-lint:
     runs-on: ubuntu-latest
