--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,7 +1,7 @@
 name: Run 'npm run lint'
 on:
   push:
-    branches: [master, main]
+    branches-ignore: [master, main]
   pull_request:
     branches: [master, main]
 
